acemsdep/ibmace.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: tt-ibm-ace-mqc-soe-ms2-build
  namespace: da-build-project
spec:
  replicas: 1
  selector:
    app: tt-ibm-ace-mqc-soe-ms2-build
    deploymentconfig: ibm-ace-mqc-soe-ms2-build
  template:
    metadata:
      labels:
        app: tt-ibm-ace-mqc-soe-ms2-build
        deploymentconfig: ibm-ace-mqc-soe-ms2-build
    spec:
      containers:
        - name: ibm-ace-mqc-soe-ms2-build
          image: >-
            __IMAGE__
          ports:
            - containerPort: 7600
              protocol: TCP
            - containerPort: 7800
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
