acemsdep/create-tt-acems2-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tt-ibm-ace-mqc-soe-ms2-build
  namespace: da-build-project
  labels:
    app: tt-ibm-ace-mqc-soe-ms2-build
spec:
  host: >-
    tt-ibm-ace-mqc-soe-ms2-build-da-build-project.apps.cloudpak.ocp4.cloudnativekube.com
  subdomain: ''
  to:
    kind: Service
    name: tt-ibm-ace-mqc-soe-ms2-build
    weight: 100
  port:
    targetPort: 7800-tcp
  wildcardPolicy: None
